<resources>
    <string name="app_name">HelloSport</string>

    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="home_name">Home Name</string>
    <string name="away_name">Away Name</string>
    <string name="nol">0</string>
    <string name="vs">VS</string>
    <string name="shoots">Shooting</string>
    <string name="goaler">Goals</string>
    <string name="lineups">Lineups</string>
    <string name="goalkeeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="favorite">Favorite</string>
    <string name="detail_event">Detail Event</string>
    <string name="no_data">No Data</string>
    <string name="league">League</string>
    <string name="events">Events</string>
    <string name="teams">Teams</string>
    <string name="description_league">Description League :</string>
    <string name="country">Country :</string>
    <string name="first_event">First Event :</string>
    <string name="search_match">Search Match</string>
    <string name="search">Search</string>
    <string name="football_match">Football Match\n Version 1.0</string>
    <string name="title_pattern_mvvm">Football Match Use Design Pattern MVVM</string>
    <string name="barcelona">Barcelona</string>
    <string name="detail_teams">Detail Teams</string>
    <string name="stadium">Stadium :</string>
    <string name="description">Description :</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="played">Played</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="loss">Loss</string>
    <string name="point">Point</string>


</resources>
