<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:targetApi="jelly_bean"
    tools:context=".ui.detail.DetailEventActivity">

    <RelativeLayout
        android:id="@+id/view_appbar"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/imgBack"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />

        <TextView
            android:fontFamily="@font/font_circular_std_book"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/detail_event"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/imgFavorite"
            android:layout_marginRight="8dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_unfavorite_24dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/view_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_delapan">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardElevation="4dp"
            app:contentPadding="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:id="@+id/dateScheduleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="2 Januari 1994"
                android:textColor="@android:color/holo_red_dark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearCard"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ImgHome"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        tools:src="@drawable/img_barca"/>
                    <TextView
                        android:fontFamily="@font/font_circular_std_book"
                        android:id="@+id/tvNameHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StyleClub"
                        android:layout_marginTop="4dp"
                        tools:text="@string/home_name"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvScoreHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/nol"
                        android:textSize="32sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vs"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvScoreAway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/nol"
                        android:textSize="32sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ImgAway"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        tools:src="@drawable/img_barca"/>
                    <TextView
                        android:id="@+id/tvNameAway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StyleClub"
                        android:layout_marginTop="4dp"
                        tools:text="@string/away_name"/>

                </LinearLayout>
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/goaler"
                android:id="@+id/tvGoalsHome"/>
            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/goaler"/>
            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/goaler"
                android:gravity="end"
                android:id="@+id/tvGoalsAway"/>
        </LinearLayout>
        <TextView
            android:fontFamily="@font/font_circular_std_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_delapan"
            android:layout_gravity="center"
            android:text="@string/lineups"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="4dp"/>
        <LinearLayout
            android:layout_marginTop="@dimen/space_delapan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/goalkeeper"
                android:id="@+id/tvGkHome"/>
            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/goalkeeper"/>
            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/goalkeeper"
                android:gravity="end"
                android:id="@+id/tvGkAway"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_delapan"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/defense"
                android:id="@+id/tvDefHome"/>
            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/defense"/>
            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/defense"
                android:gravity="end"
                android:id="@+id/tvDefAway"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_delapan"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/midfield"
                android:id="@+id/tvMidHome"/>
            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/midfield"/>
            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                tools:text="@string/midfield"
                android:gravity="end"
                android:id="@+id/tvMidAway"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_delapan"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/forward"
                android:id="@+id/tvForHome"/>
            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/forward"/>
            <TextView
                android:fontFamily="@font/font_circular_std_book"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/forward"
                android:gravity="end"
                android:id="@+id/tvForAway"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>